2020-06-06  Ivan de Jesus Deras  <ideras@gmail.com>

	* etc/cpp_skel.cc, etc/cpp_gc_skel.cc, gen_cpp.c: make the filename
	and linenum fields and related get methods "const correct" in the
	C++ generator.

	* tests/output*.out: Update test output files after "const correct"
	changes.

	* examples/expr_cpp.tc: Update C++ example after "const correct"
	changes.

	* doc/treecc.texi: Update Texinfo to reflect "const correct"
	changes.

2009-06-07  Rhys Weatherley  <rhys.weatherley@gmail.com>

	* INSTALL, doc/texinfo.tex: Remove auto-generated files from
	repository.

2009-06-06  Klaus Treichel  <ktreichel@web.de>

	* .gitignore: Add more autogenerated files and compiler results.

2009-06-04  Rhys Weatherley  <rhys.weatherley@gmail.com>

	* etc/c_skel.c, etc/cpp_skel.cc: make the C and C++ skeleton
	files 64-bit safe.

	* tests/output*.out: Update test output files after 64-bit changes.

2008-10-01  Klaus Treichel  <ktreichel@web.de>

	* auto_gen.sh: Simply call autoreconf -fi now.

	* configure.in: Remove and replace by configure.ac.

	* configure.ac: Add updated version of configure.in.

2008-09-29  Andreas Färber  <andreas.faerber@web.de>

	* Makefile.am: Fix VPATH support for building skels.c. (patch #6415)

2008-02-03  Andreas Färber  <andreas.faerber@web.de>

	* examples/Makefile.am: Remove explicit linking with libm to fix build on
	system without libm. Linking with libm is handled by configure.
	(patch #6399)

2007-06-04  Klaus Treichel  <ktreichel@web.de>

	* configure.in: Add support for multi os archs (like x86_64 which
	supports 64bit and 32bit apps).

2007-06-04  Rhys Weatherley  <rweather@southern-storm.com.au>

	* Makefile.am, gen.c, gen.h, gen_python.c, info.h, main.c, options.c,
	stream.c, stream.h, doc/treecc.texi: add Python language binding to treecc.

	* examples/expr_python.tc, examples/README: add Python example.

2007-06-03  Rhys Weatherley  <rweather@southern-storm.com.au>

	* tests/test_input.c: fix 32bit-ism that gave a warning on amd64.
