@@ -306,6 +306,8 @@ public:
 #endif
 /* output.c.  Generated automatically by treecc */
 
+#include <cstddef>
+
 #define YYNODESTATE_TRACK_LINES 1
 #define YYNODESTATE_USE_ALLOCATOR 1
 #line 1 "cpp_skel.cc"
@@ -369,7 +371,7 @@ YYNODESTATE *YYNODESTATE::state__ = 0;
 		type field; \
 	}
 #define	YYNODESTATE_ALIGN_FOR_TYPE(type)	\
-	((unsigned)(unsigned long)(&(((struct _YYNODESTATE_align_##type *)0)->field)))
+	offsetof(_YYNODESTATE_align_##type, field)
 #define	YYNODESTATE_ALIGN_MAX(a,b)	\
 	((a) > (b) ? (a) : (b))
 #define	YYNODESTATE_ALIGN_MAX3(a,b,c) \
@@ -583,7 +585,7 @@ long YYNODESTATE::currLinenum() const
 }
 
 #endif
-#line 281 "output.c"
+#line 283 "output.c"
 void *expression::operator new(size_t size__)
 {
 	return YYNODESTATE::getState()->alloc(size__);
@@ -858,7 +860,7 @@ void Infer::infer_type(expression * e__)
 			
 				e->type = e->expr1->type;
 			}
-#line 556 "output.c"
+#line 558 "output.c"
 		}
 		break;
 
@@ -888,7 +890,7 @@ void Infer::infer_type(expression * e__)
 					e->type = int_type;
 				}
 			}
-#line 586 "output.c"
+#line 588 "output.c"
 		}
 		break;
 
@@ -901,7 +903,7 @@ void Infer::infer_type(expression * e__)
 				infer_type(e->expr);
 				e->type = e->expr->type;
 			}
-#line 599 "output.c"
+#line 601 "output.c"
 		}
 		break;
 
@@ -912,7 +914,7 @@ void Infer::infer_type(expression * e__)
 			{
 				e->type = int_type;
 			}
-#line 610 "output.c"
+#line 612 "output.c"
 		}
 		break;
 
