@@ -1,3 +1,11 @@
+2020-06-07  Ivan de Jesus Deras  <ideras@gmail.com>
+
+	* etc/cpp_skel.cc gen_cpp.c: Alignment macros now use 'offsetof'
+	to avoid casting pointers to integers in the C++ generator.
+
+	* tests/output*.out: Update test output files after 'offsetof'
+	changes.
+
 2020-06-06  Ivan de Jesus Deras  <ideras@gmail.com>
 
 	* etc/cpp_skel.cc, etc/cpp_gc_skel.cc, gen_cpp.c: make the filename
